<resources>
    <string name="app_name">EduZone</string>
    <string name="onboarding_text_one">Welcome to the best online learning platform</string>
    <string name="onboading_text_two">Start Learning today and level up your knowledge</string>
    <string name="onboading_text_three">Your Journey on the path of Lifelong learning begins Now</string>
    <string name="continue_text">Continue</string>
    <string name="start_learning">Start Learning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_course">Start Course</string>
    <string name="add_bookmark">Add to Bookmark</string>
    <string name="instructor">Instructor</string>
    <string name="search">Search</string>
    <string name="course_price">Price: %1$s</string>
    <string name="course_creator">Created by %1$s</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="intro_text">Your Learning Journey Starts now</string>
    <string name="intro_caption">Skills for you present (and future)</string>
    <string name="featured">Featured</string>
    <string name="categories">Categories</string>
    <string name="top_courses">Top Courses</string>
    <string name="get_started_text">Courses to get you started in %1$s</string>
    <string name="bookmark_empty_state_text">Empty in the Bookmark \n\nAdd a course to your bookmark and \nit will show up here.</string>
    <string name="search_for_course">Search for courses</string>
    <string name="new_courses">New Courses</string>
    <string name="featured_courses">Featured courses in %1$s</string>
    <string name="popular_courses">Popular courses in %1$s</string>
    <string name="course_deleted">Course deleted from bookmark</string>
</resources>